Updated Repl.it environment